css/donut.css
/* ... */
.donut-site-stats-bottom .count-data {
  background: none repeat scroll 0 0 #555555;
  border-radius: 5px;
  color: #FFFFFF;
  display: inline-block;
  margin-right: 6px;
  padding: 0 10px;
}
.site-header {
  font-family: 'Varela Round', 'Helvetica Neue', cursive, Arial, sans-serif;
}
@media only screen and (max-width: 767px) {
  .site-header {
    height: auto;
  }
}
.site-header .site-header-cover {
  background-color: #337ab7;
}
.site-header .site-header-entry {
  padding: 10px 0;
  position: relative;
  z-index: 5;
}
.site-header .hide-btn-wrap {
  position: absolute;
  right: 2%;
}
.site-header .site-header-cover {
  background-color: #337ab7;
  color: #ffffff;
  height: 100%;
  overflow: hidden;
  position: relative;
}
.site-header .site-header-cover h1.top-heading {
  font-size: 70px;
  font-weight: bolder;
  text-shadow: 4px 3px 0px #337ab7, 9px 8px 0px rgba(0, 0, 0, 0.15);
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .site-header .site-header-cover h1.top-heading {
    font-size: 40px;
  }
}
@media only screen and (max-width: 767px) {
  .site-header .site-header-cover h1.top-heading {
    font-size: 32px;
  }
}
.site-header .site-header-fade {
  background-image: url("../images/discuss.jpg");
  background-position: 0% 40%;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  height: 100%;
  opacity: 0.1;
  position: absolute;
  width: 100%;
  z-index: 2;
}
.site-header .jumbo-box {
  padding: 10px 50px;
}
.site-header .jumbo-box .wrap {
  border: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #dddddd;
  border-color: #2e6da4;
  border-radius: 10px;
  padding: 10px 5px ;
}
.site-header .jumbo-box .wrap .hint {
  padding: 10px 0;
  font-size: 30px;
}
.site-header .jumbo-box .icon-wrap .large-icon {
  font-size: 7em;
  text-shadow: 4px 3px 0px #337ab7, 9px 8px 0px rgba(0, 0, 0, 0.15);
}
.site-header .search-wrapper {
  padding-top: 20px;
  border-top: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #eeeeee;
  border-top-color: #2e6da4;
  overflow: auto;
}
.site-header .search-bar {
  padding: 10px 5px;
  margin: auto;
  background-color: #2e6da4;
}
@media (min-width: 300px) {
  .site-header .search-bar .form-inline .form-group {
    display: inline-block;
    width: 80%;
    margin-bottom: 0;
  }
}
.site-header .search-bar .ask-field {
  width: 100%;
}
.site-header .search-bar .ask-btn {
  border-radius: 0;
}
.qa-search-button {
  border: 0;
  background: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  outline: none;
  margin-left: -10px !important;
}
.qa-search-button:hover,
.qa-search-button:active,
.qa-search-button:focus,
.qa-search-button:active:focus {
  outline: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}
.top-search-bar {
  margin-top: 10px;
  display: block;
  position: relative;
}
.top-search-bar .input-group {
  display: block;
}
.top-search-bar .input-group-btn {
  position: absolute;
  right: 25px;
  top: 4px;
}
.top-search-bar .qa-search-field.form-control {
  border-radius: 0;
  padding: 20px 12px;
}
.side-search-bar {
  margin-bottom: 20px;
  display: block;
  overflow: auto;
}
.side-search-bar .input-group {
  display: block;
}
.side-search-bar .input-group-btn {
  position: absolute;
  right: 25px;
  top: 4px;
}
.side-search-bar .qa-search-field.form-control {
  border-radius: 4px;
  padding: 20px 12px;
}
.donut-top {
  display: inline-block;
  height: 40px;
  width: 40px;
  position: fixed;
  cursor: pointer;
  border-radius: 4px;
  bottom: 10%;
  right: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
  background: #f0ad4e url(../images/top-arrow.svg) no-repeat center 50%;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: opacity .3s 0s, visibility 0s .3s;
  -moz-transition: opacity .3s 0s, visibility 0s .3s;
  transition: opacity .3s 0s, visibility 0s .3s;
}
.donut-top.is-visible {
  visibility: visible;
  opacity: 1;
}
.donut-top.fade-out {
  opacity: .5;
}
@media only screen and (min-width: 768px) {
  .donut-top {
    right: 20px;
    bottom: 10%;
  }
}
@media only screen and (min-width: 1024px) {
  .donut-top {
    height: 40px;
    width: 40px;
    right: 30px;
    bottom: 10%;
  }
}
.donut-top.is-visible,
.donut-top.fade-out,
.no-touch .donut-top:hover {
  -webkit-transition: opacity .3s 0s, visibility 0s 0s;
  -moz-transition: opacity .3s 0s, visibility 0s 0s;
  transition: opacity .3s 0s, visibility 0s 0s;
}
.no-touch .donut-top:hover {
  background-color: #f0ad4e;
  opacity: 1;
}
.qa-feed {
  padding: 15px;
  margin: 0 0 20px 0;
  overflow: auto;
  border: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #dddddd;
}
.qa-feed .icon-wrapper {
  margin-right: 10px;
}
.qa-feed .qa-feed-icon {
  display: inline-block;
  background-color: #f0ad4e;
  color: #ffffff;
  padding: 4px 8px;
  border: 1px solid #faebcc;
  border-radius: 5px;
  font-size: 16px;
  line-height: 1.42857143;
}
.qa-feed .qa-feed-link {
  font-size: 14px;
  color: #555555;
}
.qa-sidebar,
.qa-feed,
.qa-widget-side,
.qa-nav-cat {
  border-radius: 3px;
}
.qa-widget-full-high {
  margin-bottom: 0;
}
.qa-widgets-main-high {
  margin-bottom: 24px;
}
.qa-widget-main {
  margin: 0 0 15px 0;
}
.qa-widget-main-bottom {
  margin-bottom: 0;
}
.qa-widget-side,
.qa-nav-cat {
  background: #ffffff;
  border-radius: 5px;
}
.qa-widget-side {
  margin-bottom: 20px;
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  border-color: #dddddd;
}
.qa-widget-side > div {
  padding: 10px 20px 20px;
}
/* ... */

